# flavor

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.antlr4  README.md  cli.sh  flavor.json  flavor.toml  install.ps1  install.sh  manage.ps1  manage.sh  metadata.json  uninstall.ps1  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/guard/: version.ps1
.github/workflows/: guard.yml  release-beta.yml  release-stable.yml  release.yml
app/: Cargo.toml
app/src/: cli.rs  config.rs  main.rs  model.rs  output.rs  rules.rs  rust_tests.rs  scan.rs
app/src/naming/: mod.rs  rust.rs  ts.rs
app/tests/: unit.rs
app/tests/unit/: cli.rs  model.rs  naming.rs  output.rs  path_match.rs  scan.rs
crates/flavor-cli/: AGENTS.md  Cargo.toml
crates/flavor-cli/src/: cli.rs  config.rs  main.rs  model.rs  output.rs  path_match.rs  rules.rs  rust_tests.rs  scan.rs
crates/flavor-cli/src/config/: formats.rs  mod.rs  preferences.rs
crates/flavor-cli/src/naming/: mod.rs  rust.rs  svelte.rs  ts.rs  tsx.rs
crates/flavor-cli/src/plugins/: filesystem.rs  g4.rs  helper.rs  language.rs  mod.rs  source_structure.rs
crates/flavor-cli/src/plugins/language/: dispatch.rs  failure.rs  function.rs  manifest.rs  name.rs  python.rs  python_manifest.rs  shape.rs
crates/flavor-cli/src/plugins/product/: mod.rs
crates/flavor-cli/src/plugins/product/adapters/: mod.rs
crates/flavor-cli/src/scan/: aggregate.rs  fs_rules.rs  mod.rs
crates/flavor-cli/tests/: unit.rs
crates/flavor-cli/tests/unit/: cli.rs  config.rs  model.rs  naming.rs  output.rs  path_match.rs  plugins.rs  renderer_boundary.rs  scan.rs  shape.rs
crates/flavor-compiler-core/: AGENTS.md  Cargo.toml
crates/flavor-compiler-core/src/: lib.rs
crates/flavor-compiler-core/tests/: source.rs  state.rs
crates/flavor-compiler-svelte/: AGENTS.md  Cargo.toml
crates/flavor-compiler-svelte/src/: facts.rs  lib.rs
crates/flavor-compiler-ts/: AGENTS.md  Cargo.toml
crates/flavor-compiler-ts/src/: lib.rs  (+1 more)
crates/flavor-compiler-vue/: AGENTS.md  Cargo.toml
crates/flavor-core/: AGENTS.md  Cargo.toml
crates/flavor-g4/: AGENTS.md  Cargo.toml
crates/flavor-grammar/: AGENTS.md  Cargo.toml
crates/flavor-grammar/src/: lib.rs  markup.rs  metadata.rs  parse.rs  raw_builder.rs  render.rs  schema.rs  source.rs  tree_sitter_raw.rs  view.rs  vue_template.rs
crates/flavor-grammar/src/vue/: mod.rs  sfc.rs
crates/flavor-grammar/tests/: architecture.rs  contracts.rs  markup.rs  raw_builder.rs  source.rs  tree_sitter_raw.rs  view.rs
crates/flavor-plugin-core/: AGENTS.md  Cargo.toml
crates/flavor-plugin-filesystem/: AGENTS.md  Cargo.toml
crates/flavor-plugin-g4/: AGENTS.md  Cargo.toml
crates/flavor-plugin-python/: AGENTS.md  Cargo.toml
crates/flavor-plugin-rust/: AGENTS.md  Cargo.toml  build.rs
crates/flavor-plugin-rust/src/: facts.rs  lib.rs  model.rs  plugin.rs  product.rs  raw_ast.rs  shape.rs  state.rs  syntax_kind.rs
crates/flavor-plugin-rust/src/internal/: collect.rs  frontend.rs  grammar.rs  mod.rs  repeated_pattern.rs
crates/flavor-plugin-rust/tests/: contract.rs  facts.rs  schema.rs
crates/flavor-plugin-source-structure/: AGENTS.md  Cargo.toml
crates/flavor-plugin-svelte/: AGENTS.md  Cargo.toml  build.rs
crates/flavor-plugin-svelte/src/: facts.rs  lib.rs  model.rs  plugin.rs  product.rs
crates/flavor-plugin-svelte/src/descriptor/: mod.rs  parser.rs
crates/flavor-plugin-svelte/src/markup/: ast.rs  attribute.rs  cursor.rs  expressions.rs  kind.rs  mod.rs  names.rs  parser.rs
crates/flavor-plugin-svelte/src/state/: config.rs  mod.rs
crates/flavor-plugin-svelte/tests/: contract.rs  descriptor.rs  markup_parser.rs
crates/flavor-plugin-typescript/: AGENTS.md  Cargo.toml  build.rs
crates/flavor-plugin-typescript/harness/cases/: component.tsx  modern-class.ts  type-operators.ts
crates/flavor-plugin-typescript/src/: lib.rs  model.rs  plugin.rs  product.rs  syntax_kind.rs
crates/flavor-plugin-typescript/src/ast/: mod.rs
crates/flavor-plugin-typescript/src/facts/: failure.rs  mod.rs
crates/flavor-plugin-typescript/src/internal/: grammar.rs
crates/flavor-plugin-typescript/src/lexer/: kinds.rs  mod.rs
crates/flavor-plugin-typescript/src/parser/: bindings.rs  declarations.rs  expressions.rs  grammar.rs  jsx.rs  members.rs  mod.rs  modules.rs  statements.rs  types.rs
crates/flavor-plugin-typescript/src/state/: config.rs  mod.rs
crates/flavor-plugin-typescript/src/visit/: mod.rs
crates/flavor-plugin-typescript/tests/: contract.rs  harness.rs  parser.rs  run.rs  scanner.rs  schema.rs
crates/flavor-plugin-vue/: AGENTS.md  Cargo.toml  build.rs
crates/flavor-plugin-vue/harness/cases/: component.vue
crates/flavor-plugin-vue/src/: lib.rs  model.rs  plugin.rs  product.rs
crates/flavor-plugin-vue/src/facts/: mod.rs
crates/flavor-plugin-vue/src/sfc/: mod.rs
crates/flavor-plugin-vue/src/state/: config.rs  mod.rs
crates/flavor-plugin-vue/src/style/: mod.rs
crates/flavor-plugin-vue/src/template/: ast.rs  expressions.rs  kind.rs  mod.rs  names.rs  parser.rs
crates/flavor-plugin-vue/src/visit/: mod.rs
crates/flavor-plugin-vue/tests/: contract.rs  harness.rs  run.rs  sfc_descriptor.rs  template_parser.rs
crates/flavor-shared/: AGENTS.md  Cargo.toml
crates/flavor-shared/src/: grammar_build.rs  lib.rs  product.rs  state.rs
grammars/: AGENTS.md
grammars/g4/: G4Lexer.g4  G4Parser.g4  metadata.json
grammars/python/: PythonLexer.g4  PythonParser.g4  metadata.json
grammars/rust/: RustLexer.g4  RustParser.g4  flavor.g4.json  metadata.json
grammars/svelte/: SvelteLexer.g4  SvelteMarkupLexer.g4  SvelteMarkupParser.g4  SvelteParser.g4  flavor.g4.json  metadata.json
grammars/typescript/: TsxParser.g4  TypeScriptLexer.g4  TypeScriptParser.g4  flavor.g4.json  metadata.json
grammars/vue/: VueSfcLexer.g4  VueSfcParser.g4  VueTemplateLexer.g4  VueTemplateParser.g4  flavor.g4.json  metadata.json
scripts/: init.py  pyproject.toml
scripts/cli/: antlr.py  cloudflare.py  pr.py  release.py
scripts/dev/: antlr.py
scripts/lib/: cloudflare.py
scripts/manage/: flavor.ps1  flavor.sh
(+117 files in other folders)
