[workspace]
members = [
    "crates/flavor-cli",
    "crates/flavor-plugin-core",
    "crates/flavor-plugin-filesystem",
    "crates/flavor-plugin-rust",
    "crates/flavor-plugin-svelte",
    "crates/flavor-plugin-source-structure",
    "crates/flavor-plugin-typescript",
    "crates/flavor-plugin-vue",
    "crates/flavor-g4",
]
resolver = "2"
