[workspace]
members = [
    "crates/flavor-cli",
    "crates/flavor-core",
    "crates/flavor-shared",
    "crates/flavor-plugin-filesystem",
    "crates/flavor-plugin-g4",
    "crates/flavor-plugin-rust",
    "crates/flavor-plugin-svelte",
    "crates/flavor-plugin-typescript",
    "crates/flavor-plugin-vue",
    "crates/flavor-grammar",
]
resolver = "2"
