[package]
name = "flavor-cli"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Personal check-only AST-backed code flavor lint CLI."

[dependencies]
flavor-plugin-core = { path = "../flavor-plugin-core" }
flavor-plugin-filesystem = { path = "../flavor-plugin-filesystem" }
flavor-plugin-rust = { path = "../flavor-plugin-rust" }
flavor-plugin-svelte = { path = "../flavor-plugin-svelte" }
flavor-plugin-source-structure = { path = "../flavor-plugin-source-structure" }
flavor-plugin-typescript = { path = "../flavor-plugin-typescript" }
flavor-plugin-vue = { path = "../flavor-plugin-vue" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
flavor-g4 = { path = "../flavor-g4" }

[[bin]]
name = "flavor"
path = "src/main.rs"
