[package]
name = "flavor-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Personal check-only AST-backed code flavor lint CLI."

[dependencies]
flavor-core = { path = "../flavor-core" }
flavor-plugin-filesystem = { path = "../flavor-plugin-filesystem" }
flavor-plugin-g4 = { path = "../flavor-plugin-g4" }
flavor-plugin-python = { path = "../flavor-plugin-python" }
flavor-plugin-rust = { path = "../flavor-plugin-rust" }
flavor-plugin-svelte = { path = "../flavor-plugin-svelte" }
flavor-plugin-typescript = { path = "../flavor-plugin-typescript" }
flavor-plugin-vue = { path = "../flavor-plugin-vue" }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"

[dev-dependencies]
flavor-grammar = { path = "../flavor-grammar" }

[[bin]]
name = "flavor"
path = "src/main.rs"
