[package]
name = "flavor-grammar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Grammar contract and raw AST schema layer for flavor."

[features]
default = []
tree-sitter-backend = ["dep:tree-sitter"]

[dependencies]
flavor-core = { path = "../flavor-core" }
serde_json = "1"
tree-sitter = { version = "0.26.8", optional = true }

[dev-dependencies]
tree-sitter-rust = "0.24.2"
