[package]
name = "flavor-plugin-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust AST frontend for flavor."

[dependencies]
flavor-core = { path = "../flavor-core" }
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"

[build-dependencies]
flavor-grammar = { path = "../flavor-grammar" }

[dev-dependencies]
flavor-grammar = { path = "../flavor-grammar" }
