[package]
name = "flavor-plugin-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust AST frontend for flavor."

[dependencies]
flavor-core = { path = "../flavor-core" }
flavor-grammar = { path = "../flavor-grammar", features = ["tree-sitter-backend"] }
flavor-shared = { path = "../flavor-shared" }
tree-sitter-rust = "0.24.2"

[dev-dependencies]
flavor-grammar = { path = "../flavor-grammar" }
