[package]
name = "flavor-plugin-svelte"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "First-party Svelte syntax plugin for flavor."

[dependencies]
flavor-core = { path = "../flavor-core" }
flavor-grammar = { path = "../flavor-grammar" }
flavor-plugin-typescript = { path = "../flavor-plugin-typescript" }
flavor-shared = { path = "../flavor-shared" }

[dev-dependencies]
flavor-grammar = { path = "../flavor-grammar" }
