[package]
name = "flavor-plugin-typescript"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TypeScript and JavaScript AST frontend for flavor."

[dependencies]
flavor-core = { path = "../flavor-core" }
tree-sitter = "0.26.8"
tree-sitter-typescript = "0.23.2"

[build-dependencies]
flavor-grammar = { path = "../flavor-grammar" }

[dev-dependencies]
flavor-grammar = { path = "../flavor-grammar" }
