[package]
name = "flavor-plugin-typescript"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TypeScript and JavaScript AST frontend for flavor."

[dependencies]
flavor-core = { path = "../flavor-core" }
flavor-grammar = { path = "../flavor-grammar" }
flavor-shared = { path = "../flavor-shared" }

[dev-dependencies]
flavor-grammar = { path = "../flavor-grammar" }
