[package]
name = "flavor-plugin-vue"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Vue SFC AST frontend for flavor."

[dependencies]
flavor-core = { path = "../flavor-core" }
flavor-plugin-typescript = { path = "../flavor-plugin-typescript" }

[build-dependencies]
flavor-grammar = { path = "../flavor-grammar" }

[dev-dependencies]
flavor-grammar = { path = "../flavor-grammar" }
